tests/elab_fail/file_not_found.lean.out.expected
file_not_found.lean:9:0-9:5: error: no such file or directory (error code: 2)
  file: file_not_found.lean.nonexistent.txt
file_not_found.lean:16:0-16:5: error: permission denied (error code: 13)
  file: file_not_found.lean.readonly.txt
file_not_found.lean:17:0-17:5: error: invalid argument (error code: 9, bad file descriptor)
